#api + #gui : create and update form movie
